force-app/main/default/objects/Mileage_Entry__c/Mileage_Entry__c.object-meta.xml
<CustomObject>
    <label>Mileage Entry</label>
    <nameField>
        <displayFormat>ME-{0000000000}</displayFormat>
        <label>Mileage Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mileage Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>