force-app/main/default/objects/Mileage_Entry__c/fields/Allowance_Type__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Type__c</fullName>
    <label>Allowance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Passenger</fullName>
            </value>
            <value>
                <fullName>Own Vehicle</fullName>
            </value>
            <value>
                <fullName>Driver (no passenger)</fullName>
                <isActive>false</isActive>
                <label>Driver (no passenger)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>