force-app/main/default/objects/Mileage_Entry__c/fields/Calculated_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Mileage__c</fullName>
    <formula>Ending_Mileage__c - Starting_Mileage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>