force-app/main/default/objects/Mileage_Entry__c/fields/Codes_ATAK_Limbus__c.field-meta.xml
<CustomField>
    <fullName>Codes_ATAK_Limbus__c</fullName>
    <label>Codes ATAK/Limbus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Codes_ATAK_Limbus</valueSetName>
    </valueSet>
</CustomField>