force-app/main/default/objects/Mileage_Entry__c/fields/Ending_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Ending_Mileage__c</fullName>
    <label>Ending Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>