force-app/main/default/objects/Mileage_Entry__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Mileage Entries</relationshipLabel>
    <relationshipName>Mileage_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>