force-app/main/default/objects/Mileage_Entry__c/fields/Starting_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Starting_Location_Type__c</fullName>
    <label>Starting Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mileage_Location_Type</valueSetName>
    </valueSet>
</CustomField>