force-app/main/default/objects/Mileage_Entry__c/fields/Starting_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Starting_Mileage__c</fullName>
    <label>Starting Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>