force-app/main/default/objects/Mileage_Entry__c/fields/Time_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Time_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Sheet</label>
    <referenceTo>TimeSheet</referenceTo>
    <relationshipLabel>Mileage Entries</relationshipLabel>
    <relationshipName>Mileage_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>