force-app/main/default/objects/Mileage_Entry__c/fields/Timesheet_Date__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Date__c</fullName>
    <formula>Time_Sheet__r.StartDate</formula>
    <label>Timesheet Date</label>
    <type>Date</type>
</CustomField>