force-app/main/default/objects/Mileage_Entry__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Mileage Entries</relationshipLabel>
    <relationshipName>Mileage_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>