force-app/main/default/objects/Mileage_Entry__c/validationRules/End_Mileage_cannot_be_lower_than_start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Mileage_cannot_be_lower_than_start</fullName>
    <active>true</active>
    <errorConditionFormula>Starting_Mileage__c &gt; Ending_Mileage__c</errorConditionFormula>
    <errorDisplayField>Starting_Mileage__c</errorDisplayField>
    <errorMessage>You cannot have a greater Starting Mileage than the Ending Mileage. Please correct the amount.</errorMessage>
</ValidationRule>